Added base implementation for hologram stacks