@@ -1,12 +1,14 @@
 package de.oliver.fancyholograms.api.hologram;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public enum HologramType {
     TEXT(Arrays.asList("background", "textshadow", "textalignment", "seethrough", "setline", "removeline", "addline", "insertbefore", "insertafter", "updatetextinterval")),
     ITEM(List.of("item")),
-    BLOCK(List.of("block"));
+    BLOCK(List.of("block")),
+    HOLOGRAM_STACK(Collections.emptyList());
 
     private final List<String> commands;
 
